--- a/Frontend/Vue/01_Template/04_OtherBinding.html
+++ b/Frontend/Vue/01_Template/04_OtherBinding.html
@@ -22,8 +22,8 @@
 
         /* 
         ref를 사용할 때는 템플릿 영역이 아닌 곳에서는 .value를 붙여야 데이터에 접근이 가능하지만, 템플릿 영역에서는 안붙여도 된다.
-        반면, reactive는 템플릿 영역이든 아닏든 바로 접근이 가능하지만 객체형태만 관리가 가능하다.
-        */
+        반면, reactive는 템플릿 영역이든 아니든 바로 접근이 가능하지만 객체형태만 관리가 가능하다.
+        */ 
         createApp({
             setup() {
                 multiAttr = ref({   // 객체 -> reactive, ref 가능 
